# math-svg-visuals

./: .gitignore  README.md  main.py  pyproject.toml  random_circles.py  utils.py
DEFUNCT/: main.py  testing.py
data_generators/: distribution_sampler.py  plotting.py  testing.py
features/: random_circles.py
features/path_tracers/: lorentz_attractor.py  path_tracer.py
features/randomized_shape_algorithms/: random_circles.py  random_rectangles.py  random_walks.py
features/regular_patterns/: dots.py  line_patterns.py
src/math_svg_visuals/: __init__.py
src/math_svg_visuals/features/randomized_shape_algorithms/: random_circles.py  random_walks.py
src/math_svg_visuals/generators/: function_sampler.py  plotting.py
src/math_svg_visuals/shapes/: __init__.py  circle.py  path.py  rect.py
src/math_svg_visuals/utils/: __init__.py  colors.py  svg_file_handling.py
svg_shapes/: circle.py  path.py  rect.py
test_scripts/: test_rws.py
